--- a/index.html
+++ b/index.html
@@ -12,136 +12,165 @@
       rel="stylesheet"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
+
     <link rel="stylesheet" href="./css/styles.css" />
 
     <title>Студия</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html" class="logo"
-          ><span class="logo-accent">Web</span><span class="logo-text">Studio</span></a
-        >
-        <ul class="site-nav list">
-          <li>
-            <a href="./index.html" class="link current">Студия</a>
+    <header class="page-header">
+      <div class="container main-nav">
+        <nav class="site-nav">
+          <a href="./index.html" class="logo"
+            ><span class="logo-accent">Web</span><span class="logo-text">Studio</span></a
+          >
+          <ul class="site-nav list">
+            <li class="item">
+              <a href="./index.html" class="link current">Студия</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="item">
+              <a href="#contacts" class="link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+
+        <ul class="site-nav list contacts-list">
+          <li class="item">
+            <a href="mailto:info@devstudio.com" class="link contacts-link">info@devstudio.com</a>
           </li>
-          <li>
-            <a href="./portfolio.html" class="link">Портфолио</a>
-          </li>
-          <li>
-            <a href="#" class="link">Контакты</a>
+          <li class="item">
+            <a href="tel:+380961111111" class="link contacts-link">+38 093 111 11 11</a>
           </li>
         </ul>
-      </nav>
-
-      <ul class="list">
-        <li><a href="mailto:info@devstudio.com" class="contacts-link">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111" class="contacts-link">+38 093 111 11 11</a></li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-btn">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="hero-btn">Заказать услугу</button>
+        </div>
       </section>
-      <section>
-        <h2 class="hidden-title">Наши преимущества</h2>
-        <ul class="list">
-          <li>
-            <h3 class="benefits-title">Внимание к деталям</h3>
-            <p class="benefits-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Пунктуальность</h3>
-            <p class="benefits-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Планирование</h3>
-            <p class="benefits-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="benefits-title">Современные технологии</h3>
-            <p class="benefits-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="section">
+        <div class="container">
+          <h2 class="visually-hidden hidden-title">Наши преимущества</h2>
+          <ul class="benefits-list list">
+            <li class="benefits-item">
+              <h3 class="benefits-title">Внимание к деталям</h3>
+              <p class="benefits-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Пунктуальность</h3>
+              <p class="benefits-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Планирование</h3>
+              <p class="benefits-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Современные технологии</h3>
+              <p class="benefits-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
-      <section>
-        <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li>
-            <a href="#"
-              ><img src="./images/box1.jpg" width="370" alt="Разработка десктопного приложения"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img src="./images/box2.jpg" width="370" alt="Разработка мобильного приложения"
-            /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./images/box3.jpg" width="370" alt="Разработка дизайна" /></a>
-          </li>
-        </ul>
+      <section class="section specialization">
+        <div class="container">
+          <h2 class="section-title">Чем мы занимаемся</h2>
+          <ul class="list specialization-list">
+            <li class="specialization-item">
+              <a href="#"
+                ><img src="./images/box1.jpg" width="370" alt="Разработка десктопного приложения"
+              /></a>
+            </li>
+            <li class="specialization-item">
+              <a href="#"
+                ><img src="./images/box2.jpg" width="370" alt="Разработка мобильного приложения"
+              /></a>
+            </li>
+            <li class="specialization-item">
+              <a href="#"><img src="./images/box3.jpg" width="370" alt="Разработка дизайна" /></a>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/team_photo_1.jpg" width="270" alt="Фото участника команды №1" />
-            <h3 class="comand-title">Игорь Демьяненко</h3>
-            <p class="comand-text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/team_photo_2.jpg" width="270" alt="Фото участника команды №2" />
-            <h3 class="comand-title">Ольга Репина</h3>
-            <p class="comand-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/team_photo_3.jpg" width="270" alt="Фото участника команды №3" />
-            <h3 class="comand-title">Николай Тарасов</h3>
-            <p class="comand-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/team_photo_4.jpg" width="270" alt="Фото участника команды №4" />
-            <h3 class="comand-title">Михаил Ермаков</h3>
-            <p class="comand-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="section team">
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="list team-list">
+            <li class="team-item">
+              <img src="./images/team_photo_1.jpg" width="270" alt="Фото участника команды №1" />
+              <div class="team-caption">
+                <h3 class="team-title">Игорь Демьяненко</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img src="./images/team_photo_2.jpg" width="270" alt="Фото участника команды №2" />
+              <div class="team-caption">
+                <h3 class="team-title">Ольга Репина</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img src="./images/team_photo_3.jpg" width="270" alt="Фото участника команды №3" />
+              <div class="team-caption">
+                <h3 class="team-title">Николай Тарасов</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img src="./images/team_photo_4.jpg" width="270" alt="Фото участника команды №4" />
+              <div class="team-caption">
+                <h3 class="team-title">Михаил Ермаков</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
-      <a href="./index.html" class="logo"
-        ><span class="logo-accent">Web</span><span class="logo-text">Studio</span></a
-      >
-      <address class="footer-address">
-        <ul class="list">
-          <li>
-            <a
-              href="https://goo.gl/maps/bYyocu46EjJC9pPd8"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="footer-address"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a>
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="footer-link">+38 093 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="./index.html" class="logo"
+          ><span class="logo-accent">Web</span><span class="logo-text">Studio</span></a
+        >
+        <address class="footer-address" id="contacts">
+          <ul class="list address-list">
+            <li class="address-item">
+              <a
+                href="https://goo.gl/maps/bYyocu46EjJC9pPd8"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="link map-link"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="address-item">
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+            <li class="address-item">
+              <a href="tel:+380961111111" class="link">+38 093 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
